// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpForm client errors validation should show all client validation errors after Sign Up is clicked when fields are empty 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Email
          <input
            class="sc-gKAaRy coEsgZ"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a correct email address
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Choose username
          <input
            class="sc-gKAaRy coEsgZ"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a valid user name
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Password
          <input
            class="sc-gKAaRy coEsgZ"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password must have at least 8 characters
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect email was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Email
          <input
            class="sc-gKAaRy coEsgZ"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a correct email address
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Choose username
          <input
            class="sc-gKAaRy eFgpxs"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect password confirmation was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Choose username
          <input
            class="sc-gKAaRy eFgpxs"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Repeat your password
          <input
            class="sc-gKAaRy coEsgZ"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="11111111"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password confirmation doesn't match
          </div>
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect password length was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Choose username
          <input
            class="sc-gKAaRy eFgpxs"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Password
          <input
            class="sc-gKAaRy coEsgZ"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="1234567"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Password must have at least 8 characters
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="1234567"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm client errors validation should show error if incorrect username was set 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Choose username
          <input
            class="sc-gKAaRy coEsgZ"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel><poltavets"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            Provide a valid user name
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm rendering should render empty form 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Choose username
          <input
            class="sc-gKAaRy eFgpxs"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value=""
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm rendering should render filled form 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Choose username
          <input
            class="sc-gKAaRy eFgpxs"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm server errors validation should forbid signing up when there is an error after checking user name 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Choose username
          <input
            class="sc-gKAaRy coEsgZ"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            This name is already taken
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SignUpForm server errors validation should hide all client validation errors after Sign Up is clicked when fields are set but username has server error 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM bUacdj"
  >
    Sign up to Coins.ph!
    <form
      class="sc-hKFxyN dbVKjX"
    >
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Email
          <input
            class="sc-gKAaRy eFgpxs"
            name="email"
            placeholder="Email"
            required=""
            type="email"
            value="pavel.a.poltavets@gmail.com"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd cxNKDc"
        >
          Choose username
          <input
            class="sc-gKAaRy coEsgZ"
            name="username"
            placeholder="Choose username"
            required=""
            type="text"
            value="pavel poltavets"
          />
          <div
            class="sc-gtsrHT cFYBYZ"
          >
            This name is already taken
          </div>
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Password
          <input
            class="sc-gKAaRy eFgpxs"
            name="password"
            placeholder="Password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-jSFjdj ejmATF"
      >
        <label
          class="sc-iCoGMd exJjzr"
        >
          Repeat your password
          <input
            class="sc-gKAaRy eFgpxs"
            name="passwordConfirm"
            placeholder="Repeat your password"
            required=""
            type="password"
            value="12345678"
          />
          <div
            class="sc-gtsrHT dElqeF"
          />
        </label>
      </div>
      <div
        class="sc-dlnjwi kAkWwW"
      >
        Sign up
        <div
          class="sc-gtsrHT dElqeF"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;
